<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".principal">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="390dp"
        android:layout_height="218dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <GridView
                android:id="@+id/gridDatos"
                android:layout_width="800dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:numColumns="7"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:scrollbarAlwaysDrawVerticalTrack="false" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/titul"
        android:textColor="@color/purple_700"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="314dp"
        android:layout_height="204dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/idd"
        app:layout_constraintBottom_toTopOf="@+id/btn_agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_matricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Matricula"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_matricula"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/matri"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textColor="#8F2909"
                android:textColorHint="#757575"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_nombre"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/nomb"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="#8F2909"
                android:textColorHint="#757575"
                android:textSize="20sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Edad"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_edad"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/edad"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textColor="#8F2909"
                android:textColorHint="#757575"
                android:textSize="20sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv_semestre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Semestre"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_semestre"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/semestre"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="#8F2909"
                android:textColorHint="#757575"
                android:textSize="18sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv_promedio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prome"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_promedio"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/prome"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="#8F2909"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estado_actual"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_estado"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/estado"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="#8F2909"
                android:textColorHint="#757575" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="serif-monospace"
        android:onClick="btn_agregar"
        android:text="@string/btn_agreg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_modificar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:onClick="btn_modificar"
        android:text="@string/btn_modifi"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_eliminar"
        app:layout_constraintStart_toEndOf="@+id/btn_agregar"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="serif-monospace"
        android:onClick="btn_eliminar"
        android:text="@string/btn_elimi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_modificar" />
</androidx.constraintlayout.widget.ConstraintLayout>